# ubutil

./: CMakeLists.txt  CMakePresets.json  LICENSE
fclmodule/: CMakeLists.txt  fclmodule.cxx
python/: CMakeLists.txt  experiment_utilities.py  extractor_dict.py  project_utilities.py  root_metadata.py  subruns.py  tpc_events.py
root_analyze/: CMakeLists.txt  art_event_info.py  event_info.py  flashana.py  hitana.py  sam_metadata.py
root_batch/: CMakeLists.txt  cint_analyze.py  lar.py  root_analyze.py
scripts/: PickCorsikaFluxAndCopy.sh  check_config.py  check_crt_merge.py  check_crt_merging.sh  condor_lar.sh  condor_merge.sh  condor_merge2.sh  condor_merge_hadd.sh  condor_start_project.sh  condor_start_project_celltree.sh  condor_start_project_crt_merge_v06_26_01_13.sh  condor_start_project_crt_merge_v06_26_01_13_33.sh  condor_start_project_crt_merge_v06_26_01_26.sh  condor_start_project_crt_merge_v06_26_01_33.sh  condor_stop_project.sh  consolidate_swizzled.py  crt_remerging.sh  fcl_check.sh  fclpath.sh  fetch_merged_dlreco.py  filter_duplicates.py  find_fhicl.sh  getDataInfo.py  getevent.sh  hootgibson_extracter.py  make_pubs_config.py  make_sam_wrapper.sh  make_uboone_suite_tag.sh  make_uboone_tutorial.sh  make_xml_data.sh  make_xml_devel.sh  make_xml_mcc5.0.sh  make_xml_mcc6.0.sh  make_xml_mcc6.0a.sh  make_xml_mcc6.1.sh  make_xml_mcc7.sh  merge.py  merge2.py  merge_dqm_hists.sh  merge_metadata.py  (+39 more)
split/: clean_repo_history.sh  push_split_repos.sh  split_uboonecode.sh  split_uboonecode2.sh
tools/: CMakeLists.txt  key_params.cc
ups/: product_deps
validation/: CMakeLists.txt  Momresolution.py  calorimetry.py  flash.py  hit.py  makeplots.py  pid.py  runVal.sh  trackingeff.py  validation_utilities.py
validation/anatree/: makeplots.py
validation/dataMonteCarloComparisons/: .getShowerInformation.C.swp  .getTrackInformation.C.swp  .nfs000000002caca8ed000000e1  .nfs000000003967c3f60000001c  .nfs000000004caaf3aa00000a5f  .nfs00000000614f65de0000001e  .nfs0000000086425f93000000e0  .nfs000000008f88713a000000dc  .nfs00000000998d9bdd0000001f  .nfs00000000ba1dda4b000000db  .nfs00000000c68e908900000a60  .nfs00000000cbed163b00000020  .nfs00000000d0eb4b0700000a61  .nfs00000000d42c0a840000001d  CMakeLists.txt  CompareAlgos.C  calculateChiSqDistance.C  getCalorimetryInformation.C  getFlashInformation.C  getHitInformation.C  getMax.C  getNBins.C  getNflsInformation.C  getPMTFracInformation.C  getPMTInformation.C  getShowerInformation.C  getTrackInformation.C  readme.md  runAll.sh  runCalorimetry.sh  runFlashes.sh  runHits.sh  runNfls.sh  runPMTFrac.sh  runPMTs.sh  runShowers.sh  runTracks.sh  setLegend.C  setStyle.C  setStyleRatio.C  (+2 more)
validation/fcl/: spacepoint_ana_raw.fcl
validation/oldValidationScripts/anatree/: CMakeLists.txt  Momresolution.py  calorimetry.py  flash.py  hit.py  makeplots.py  pid.py  trackingeff.py  validation_utilities.py
validation/oldValidationScripts/anatree/trackingeff_cpp_translation/: TrackEfficiency.C  TrackEfficiency_functions.C
validation/truthMonteCarloComparisions/: CMakeLists.txt  TrackEfficiency.C  TrackEfficiency_functions.C  Track_Vertex_Comparisons.C  TruthValid_CompareAlgos.C  runCItruth.sh  truthMonteCarloComparisonsScript.C
xml/: CMakeLists.txt
xml/S2012.12.17/: CMakeLists.txt
xml/S2013.06.25/: CMakeLists.txt
xml/mcc2.1/: CMakeLists.txt
xml/mcc3.0/: CMakeLists.txt
xml/mcc4.0/: CMakeLists.txt
xml/mcc5.0/: CMakeLists.txt  prod_eminus_0.1-2.0GeV_isotropic_uboone.xml  prod_eminus_0.5-5.0GeV_25degf_uboone.xml  prod_eplus_0.1-2.0GeV_isotropic_uboone.xml  prod_eplus_0.5-5.0GeV_25degf_uboone.xml  prod_gamma_0.1-2.0GeV_isotropic_uboone.xml  prod_k0L_0.1-2.0GeV_isotropic_uboone.xml  prod_k0S_0.1-2.0GeV_isotropic_uboone.xml  prod_kminus_0.1-2.0GeV_isotropic_uboone.xml  prod_kplus_0.1-2.0GeV_isotropic_uboone.xml  prod_lambda_0.1-2.0GeV_isotropic_uboone.xml  prod_muminus_0.1-2.0GeV_isotropic_uboone.xml  prod_muminus_0.5-5.0GeV_25degf_uboone.xml  prod_muplus_0.1-2.0GeV_isotropic_uboone.xml  prod_muplus_0.5-5.0GeV_25degf_uboone.xml  prod_n_0.1-2.0GeV_isotropic_uboone.xml  prod_nbar_0.0GeV_isotropic_uboone.xml  prod_p_0.1-2.0GeV_isotropic_uboone.xml  prod_pi0_0.1-2.0GeV_isotropic_uboone.xml  prod_piminus_0.1-2.0GeV_isotropic_uboone.xml  prod_piplus_0.1-2.0GeV_isotropic_uboone.xml  prod_supernova_uboone.xml  prodcosmics_uboone.xml  prodgenie_anue_cc_uniform_flux_uboone.xml  prodgenie_anumu_cc_uniform_flux_uboone.xml  prodgenie_anumu_nc_uniform_flux_uboone.xml  prodgenie_bnb_dirt_nu_cosmic_uboone.xml  prodgenie_bnb_dirt_nu_uboone.xml  prodgenie_bnb_nu_cosmic_uboone.xml  prodgenie_bnb_nu_uboone.xml  prodgenie_bnb_nue_cosmic_uboone.xml  prodgenie_bnb_nue_uboone.xml  prodgenie_nue_cc_uniform_flux_uboone.xml  prodgenie_numi_dirt_nu_cosmic_uboone.xml  prodgenie_numi_dirt_nu_uboone.xml  prodgenie_numi_nu_cosmic_uboone.xml  prodgenie_numi_nu_uboone.xml  prodgenie_numu_cc_uniform_flux_uboone.xml  prodgenie_numu_nc_uniform_flux_uboone.xml  prodstopmu_cosmic_uboone.xml
xml/mcc6.0/: CMakeLists.txt  prod_bnblike_eminus_uboone.xml  prod_bnblike_gamma_uboone.xml  prod_bnblike_muminus_uboone.xml  prod_bnblike_pi0_uboone.xml  prod_bnblike_proton_uboone.xml  prod_eminus_0.1-2.0GeV_isotropic_uboone.xml  prod_eminus_0.5-5.0GeV_25degf_uboone.xml  prod_eplus_0.1-2.0GeV_isotropic_uboone.xml  prod_eplus_0.5-5.0GeV_25degf_uboone.xml  prod_gamma_0.1-2.0GeV_isotropic_uboone.xml  prod_k0L_0.1-2.0GeV_isotropic_uboone.xml  prod_k0S_0.1-2.0GeV_isotropic_uboone.xml  prod_kminus_0.1-2.0GeV_isotropic_uboone.xml  prod_kplus_0.1-2.0GeV_isotropic_uboone.xml  prod_lambda_0.1-2.0GeV_isotropic_uboone.xml  prod_muminus_0.1-2.0GeV_isotropic_uboone.xml  prod_muminus_0.5-5.0GeV_25degf_uboone.xml  prod_muplus_0.1-2.0GeV_isotropic_uboone.xml  prod_muplus_0.5-5.0GeV_25degf_uboone.xml  prod_n_0.1-2.0GeV_isotropic_uboone.xml  prod_nbar_0.0GeV_isotropic_uboone.xml  prod_p_0.1-2.0GeV_isotropic_uboone.xml  prod_pi0_0.1-2.0GeV_isotropic_uboone.xml  prod_piminus_0.1-2.0GeV_isotropic_uboone.xml  prod_piplus_0.1-2.0GeV_isotropic_uboone.xml  prod_supernova_uboone.xml  prodcosmics_uboone.xml  (+18 more)
(+47 files in other folders)
